# seapath-installer

./: .cqfdrc  .gitignore  .gitreview  CHANGES-3.4.calamares  CMakeLists.txt  README.md  build.sh  partition.conf  settings.conf
.cqfd/docker/: Dockerfile
.github/workflows/: build-and-s3-upload.yml  ci-seapath-installer.yml  publish-release-deb.yml
debian/DEBIAN/: control
src/branding/: CMakeLists.txt
src/branding/seapath/: 05-onboarding.png.license  ImageSlide.qml  branding.desc  show.qml
src/modules/finishedq/: finishedq.conf
src/modules/imageselection/: CMakeLists.txt  Config.cpp  Config.h  ImageSelection.yaml  ImageSelectionPage.cpp  ImageSelectionPage.h  ImageSelectionPage.ui  ImageSelectionViewStep.cpp  ImageSelectionViewStep.h  SeapathFlavorSelection.ui
src/modules/keyboard/: SetKeyboardLayoutJob.cpp
src/modules/mount/: main.py
src/modules/network/: CMakeLists.txt  Config.cpp  Config.h  NetworkInterfaceList.cpp  NetworkInterfaceList.h  NetworkPage.cpp  NetworkPage.h  NetworkPage.ui  NetworkViewStep.cpp  NetworkViewStep.h
src/modules/networkcfg/: main.py
src/modules/partition/: CMakeLists.txt
src/modules/partition/core/: PartitionCoreModule.cpp  PartitionCoreModule.h
src/modules/partition/gui/: ChoicePage.cpp  ChoicePage.h  ChoicePage.ui  PartitionDialogHelpers.cpp  PartitionLabelsView.cpp  (+1 more)
src/modules/rawimage/: main.py  module.desc
src/modules/sshkeyselection/: CMakeLists.txt  Config.cpp  Config.h  SshKeySelectionJob.cpp  SshKeySelectionJob.h  SshKeySelectionPage.cpp  SshKeySelectionPage.h  SshKeySelectionPage.ui  SshKeySelectionViewStep.cpp  SshKeySelectionViewStep.h
src/modules/uefiboot/: main.py  module.desc
src/modules/umount/: UmountJob.cpp
src/modules/unpackfs/: unpackfs.conf
src/modules/welcome/: welcome.conf
(+1 files in other folders)
